--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             /* Add styles for the reload button if needed */
         }
     </style>
+    <script src="scripts/script.js" defer></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             var bible = 'https://labs.bible.org/api/?passage=random&type=json';
